static/css/main.css
/* ... */
.numeral {
  font-family: et-book-roman-old-style;
}

.danger {
  color: red;
}

article {
  padding: 5rem 0rem;
}

section {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

section > ul {
  margin-top: 0;
}

section > h2 {
  margin-top: 1rem;
}

p,
dl,
ol,
ul {
  font-size: 1.4rem;
  line-height: 2rem;
}

ol ol {
  list-style-type: lower-latin;
}

ol ol ol {
  list-style-type: lower-roman;
}

p {
  margin-bottom: 1.4rem;
  margin-top: 1.4rem;
  padding-right: 0;
  vertical-align: baseline;
}

/* Chapter Epigraphs */
div.epigraph {
  margin: 5em 0;
}

main > h1 + blockquote,
div.epigraph > blockquote {
  margin-bottom: 3em;
  margin-top: 3em;
}

section > blockquote {
  margin-bottom: 2em;
  margin-top: 1em;
}

main > h1 + blockquote,
section > blockquote,
section > blockquote + dl dt,
div.epigraph > blockquote,
div.epigraph > blockquote > p {
  font-style: italic;
}

div.epigraph > blockquote > footer {
  font-style: normal;
}

div.epigraph > blockquote > footer > cite {
  font-style: italic;
}
/* end chapter epigraphs styles */

blockquote {
  font-size: 1.4rem;
}

blockquote p {
  margin-right: 40px;
  width: 63%;
}

blockquote footer {
  font-size: 1.1rem;
  text-align: right;
  width: 63%;
}

section > p,
section > footer,
section > table {
  width: 63%;
}

/* 50 + 5 == 55, to be the same width as paragraph */
section > dl,
section > ol,
section > ul {
  width: 63%;
}

li:not(:first-child) {
  margin-top: 0.25rem;
}

dt:not(:first-child) {
  margin-top: 1rem;
}

figure {
  border: 0;
  font-size: 100%;
  font: inherit;
  margin: 0 0 3em 0;
  -webkit-margin-end: 0;
  -webkit-margin-start: 0;
  max-width: 63%;
  padding: 0;
  vertical-align: baseline;
}

figcaption {
  clear: right;
  float: right;
  font-size: 1.1rem;
  line-height: 1.6;
  margin-bottom: 0;
  margin-top: 0;
  max-width: 40%;
  position: relative;
  vertical-align: baseline;
}

figure.fullwidth figcaption {
  margin-right: 24%;
}

/* Links: replicate underline that clears descenders */
a:link,
a:visited {
  color: inherit;
}

.no-tufte-underline:link {
  background: unset;
  text-shadow: unset;
}

a:link, .tufte-underline, .hover-tufte-underline:hover {
  background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(currentColor, currentColor);
  background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(currentColor, currentColor);
  background-position: 0% 93%, 100% 93%, 0% 93%;
  -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
  -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
  background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
  background-repeat: no-repeat, no-repeat, repeat-x;
  text-decoration: none;
  text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
}

@media screen and (-webkit-min-device-pixel-ratio: 0) {
  a:link, .tufte-underline, .hover-tufte-underline:hover {
    background-position-y: 87%, 87%, 87%;
  }
}

/* Adds dark mode */
@media (prefers-color-scheme: dark) {
  a:link, .tufte-underline, .hover-tufte-underline:hover {
    text-shadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
  }
}

a:link::selection,
a:link::-moz-selection {
  background: #b4d5fe;
  text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
}

/* Sidenotes, margin notes, figures, captions */
img {
  max-width: 100%;
}

.sidenote,
.marginnote {
  clear: right;
  float: right;
  font-size: 1.1rem;
  line-height: 1.3;
  margin-bottom: 0;
  margin-right: -60%;
  margin-top: 0.3rem;
  position: relative;
  vertical-align: baseline;
  width: 50%;
}

.sidenote-number {
  counter-increment: sidenote-counter;
}

.sidenote-number:after,
.sidenote:before {
  font-family: et-book-roman-old-style;
  position: relative;
  vertical-align: baseline;
}

.sidenote-number:after {
  content: counter(sidenote-counter);
  font-size: 1rem;
  left: 0.1rem;
  top: -0.5rem;
}

.sidenote:before {
  content: counter(sidenote-counter);
  font-size: 1rem;
  left: -0.75rem;
  position: absolute;
  text-align: right;
  top: -0.2rem;
}

blockquote .sidenote,
blockquote .marginnote {
  margin-right: -82%;
  min-width: 59%;
  text-align: left;
}

div.fullwidth,
table.fullwidth {
  width: 100%;
}

div.table-wrapper {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
  overflow-x: auto;
}

.sans {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
  letter-spacing: .03em;
}

code, pre > code {
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 1.0rem;
  line-height: 1.42;
  -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS. See https://github.com/edwardtufte/tufte-css/issues/81#issuecomment-261953409 */
}

.sans > code {
  font-size: 1.2rem;
}

h1 > code,
h2 > code,
h3 > code {
  font-size: 0.80em;
}

.marginnote > code,
.sidenote > code {
  font-size: 1rem;
}

pre > code {
  display: block;
  font-size: 0.9rem;
  margin-left: 2.5%;
  overflow-x: auto;
  width: 52.5%;
}

pre.fullwidth > code {
  width: 90%;
}

.fullwidth {
  max-width: 90%;
  clear:both;
}

span.newthought {
  font-size: 1.2em;
  font-variant: small-caps;
}

input.margin-toggle {
  display: none;
}

label.sidenote-number {
  display: inline-block;
  max-height: 2rem; /* should be less than or equal to paragraph line-height */
}

label.margin-toggle:not(.sidenote-number) {
  display: none;
}
/* ... */

